devops-configs/k8s/ingress/test-ingress-service-by-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress-host
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /nginx/test
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
